--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "recharts": "^3.1.2",
+    "sonner": "^2.0.7",
     "svix": "^1.74.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
