feat(transactions): add receipt number to transactions and update related components
- Added `receipt_number` column to the `transactions` table in the database.
- Updated the `BulkOperationsBar` component to calculate and display total amounts and breakdowns for selected transactions.
- Enhanced the `MobileTransactionCard` to show receipt numbers and allow category clicks.
- Modified the database schema and migration files to reflect the new column.
- Updated utility functions to handle receipt numbers in transaction creation.

--- a/package.json
+++ b/package.json
@@ -71,5 +71,6 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.9.0+sha1.aa4a6bfc002fd508e5643944fb46f2ad64eb8b95"
 }
