--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "svix": "^1.74.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "vercel": "^46.0.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
