--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start -p 3001",
     "lint": "eslint",
+    "deploy:vercel": "vercel --prod 2>&1 | grep -E \"(Production|https://|✓|Error)\" | tail -10",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
