--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^0.5.6",
     "@sentry/nextjs": "^10.5.0",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
@@ -55,8 +56,10 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-email": "^4.3.0",
     "react-hook-form": "^7.62.0",
     "recharts": "^3.1.2",
+    "resend": "^6.1.2",
     "sonner": "^2.0.7",
     "svix": "^1.74.1",
     "tailwind-merge": "^3.3.1",
