--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/budget-reset",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/check-reminders",
+      "schedule": "0 8 * * *"
     }
   ]
 }
