--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
     "@types/papaparse": "^5.3.16",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -52,6 +53,7 @@
     "next": "15.5.0",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
+    "pdf2json": "^4.0.0",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
