FEAT(transactions): Add transfer marking and linking functionality 🎉
- Introduced `transferPairId` to the Transaction interface and database schema to link transfer transactions.
- Implemented bulk operations to mark and unmark transactions as transfers.
- Created API endpoints for linking transfers and creating transfers between accounts.
- Enhanced the UI with dialogs for creating and linking transfers, including validation and user feedback.
- Updated the bulk operations bar to include options for marking and unmarking transfers.
- Improved mobile transaction card to display transfer status.

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sonner": "^2.0.7",
     "svix": "^1.74.1",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "vercel": "^50.18.1",
     "zod": "^4.0.17"
@@ -75,6 +76,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
