FEAT(goals): Add goal management features including creation, contribution, and history tracking 🎯💰
- Implemented AddGoalDialog for creating and editing goals with validation and preset options.
- Created ContributeGoalDialog for adding contributions to goals with milestone notifications.
- Developed GoalCard component to display goal details, progress, and actions (edit, contribute, delete).
- Added GoalHistorySheet to show contribution history for each goal.
- Updated database schema to include goals and contributions tables.
- Introduced motivational quotes for user engagement and inspiration.
- Enhanced app sidebar and mobile navigation to include goals section.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@types/papaparse": "^5.3.16",
     "canvas": "^3.2.0",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -67,12 +68,13 @@
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
-    "vercel": "^50.18.1",
+    "vercel": "^50.23.2",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
