--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.33",
+    "@ai-sdk/react": "^3.0.105",
     "@clerk/nextjs": "^6.31.3",
     "@hookform/resolvers": "^5.2.1",
     "@neondatabase/serverless": "^1.0.1",
@@ -40,6 +42,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
     "@types/papaparse": "^5.3.16",
+    "ai": "^6.0.103",
     "canvas": "^3.2.0",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
@@ -61,7 +64,9 @@
     "react-dropzone": "^14.3.8",
     "react-email": "^4.3.0",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.1.2",
+    "remark-gfm": "^4.0.1",
     "resend": "^6.1.2",
     "sonner": "^2.0.7",
     "svix": "^1.74.1",
